# demo_mailbox_rpi

./: CMakeLists.txt  README.md  demo_mailbox.camkes  main.c  main.h  system_config.h
components/mailbox_app/: mailbox_app.camkes
components/mailbox_app/src/: main.c
plat/rpi3/: plat.camkes  plat.h
plat/rpi4/: plat.camkes  plat.h  plat_defaults.h
